Updated itinerary transformation and fixed data structure

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,8 @@
-GROQ_API_KEY=your-groq-api-key
-ANOTHER_SECRET_KEY=your-other-secret
+AMADEUS_API_KEY=uY6slRcteLmHRKXQ9NP1lB2aQJvBU44s
+AMADEUS_API_SECRET=T9CCi6MU58eT4HaGG
+GROQ_API_KEY=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
+PORT=3001
+NODE_ENV=production
+
 
 
