Set Node version to 18.17.0

--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "author": "",
   "license": "ISC",
   "description": "Backend API for Travel Application",
+  "engines": {
+    "node": "18.17.0"
+  },
   "dependencies": {
     "@types/node": "^22.10.5",
     "amadeus": "^11.0.0",
