--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,11 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "./src/index.js",
-      "use": "@vercel/node"
+  "functions": {
+    "src/index.js": {
+      "runtime": "@vercel/node@3.0.0"
     }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/src/index.js",
-      "methods": ["GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"]
-    }
+  },
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/src/index.js" }
   ]
 }
