Fix vercel.json configuration

--- a/vercel.json
+++ b/vercel.json
@@ -6,11 +6,8 @@
       "use": "@vercel/node"
     }
   ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "src/index.ts"
-    }
+  "rewrites": [
+    { "source": "/(.*)", "destination": "/src/index.ts" }
   ],
   "headers": [
     {
