--- a/vercel.json
+++ b/vercel.json
@@ -7,16 +7,27 @@
     }
   ],
   "rewrites": [
-    { "source": "/(.*)", "destination": "/src/index.ts" }
+    { 
+      "source": "/(.*)", 
+      "destination": "/src/index.ts" 
+    }
   ],
   "headers": [
     {
-      "source": "/api/(.*)",
+      "source": "/(.*)",
       "headers": [
-        { "key": "Access-Control-Allow-Credentials", "value": "true" },
-        { "key": "Access-Control-Allow-Origin", "value": "https://travel-frontend-7dupsowm4-brians-projects-df69fd22.vercel.app" },
-        { "key": "Access-Control-Allow-Methods", "value": "GET,OPTIONS,PATCH,DELETE,POST,PUT" },
-        { "key": "Access-Control-Allow-Headers", "value": "X-CSRF-Token, X-Requested-With, Accept, Accept-Version, Content-Length, Content-MD5, Content-Type, Date, X-Api-Version" }
+        { 
+          "key": "Access-Control-Allow-Origin", 
+          "value": "*"
+        },
+        { 
+          "key": "Access-Control-Allow-Methods", 
+          "value": "GET, POST, OPTIONS" 
+        },
+        { 
+          "key": "Access-Control-Allow-Headers", 
+          "value": "Content-Type" 
+        }
       ]
     }
   ]
