--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "license": "ISC",
   "description": "Backend API for Travel Application",
   "engines": {
-    "node": "18.17.0"
+    "node": ">=18.17.0"
   },
   "dependencies": {
+    "@types/express": "^4.17.21",
     "@types/node": "^22.10.5",
     "amadeus": "^11.0.0",
     "cors": "^2.8.5",
@@ -24,9 +25,7 @@
     "express": "^4.21.2",
     "groq-sdk": "^0.9.1",
     "openai": "^4.77.3",
-    "typescript": "^5.7.3",
-    "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17"
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
