--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "ts-node --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "vercel-build": "echo 'Build step completed'",
+    "vercel-build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
